--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "spatie/laravel-sitemap": "^5.8",
         "tavo1987/laravel-ec-validator": "^1.1",
         "tymon/jwt-auth": "1.0.0-rc.4.1"
     },
